add explicit email address

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
 							<li><a href="mailto:zifengwangking@163.com" class="icon fa-envelope"><span class="label">Email zifengwangking@163.com</span></a></li>
+							<li> zifengwangking@163.com</li>
 						</ul>
 					</footer>
 				</section>
