--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 											<ul>
 												<li> Tracked people in video clips using a deep reinforcement learning approach and created decision-making network for tracking trained by policy gradient</li>
 												<li> Combined deep neural network with motion prediction </li>
-												<li> Submitted paper, <a style="font-style:italic;color:black;text-decoration:underline">Multi-Agent Deep Reinforcement Learning for Multi-Object Tracking</a> for CVPR 2018 </li>
+												<li> Submitted paper, <a href = "MADRL.pdf" style="font-style:italic;color:black;text-decoration:underline">Multi-Agent Deep Reinforcement Learning for Multi-Object Tracking</a> for CVPR 2018 </li>
 											</ul>
 										</div>
 									</article>
