--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 								<h3>Education Background</h3>
 								<ul id="exp" style="list-style:none;">
 									<li> <img class="school-logo" src="schools/Tsinghua.jpeg"><div class="school-text">Aug 2014 - July 2018, Tsinghua University, <br />B.S. degree in Electronic Engineering, GPA 92/100 (Top 5%) </div></li>
-									<li> <img class="school-logo" src="schools/UMICH.jpeg"><div class="school-text">July 2017 - Sep 2017, University of Michigan, <br />Visiting researcher at Department of Computer Science and Engineering</div></li>
+									<li> <img class="school-logo" src="schools/UMich.jpeg"><div class="school-text">July 2017 - Sep 2017, University of Michigan, <br />Visiting researcher at Department of Computer Science and Engineering</div></li>
 									<li> <img class="school-logo" src="schools/NEU.jpeg"><div class="school-text">Sep 2016 - Dec 2016, Northeastern University, <br />Exchange student at Department of Computer and Electrical Engineering</div></li>
 								</ul>
 							</div>
