--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 								<h3>Skills</h3>
 								<!--<p>My skills mainly focus on learning and coding.</p> -->
 								<ul class="feature-icons">
-									<li class="fa-code">Mainstream deep learning frameworks like TensorFlow, Pytorch and Caffe</li>
+									<li class="fa-code">Deep learning frameworks like TensorFlow, Pytorch and Caffe</li>
 									<li class="fa-book">Good command of Python, C/C++, Java and MATLAB</li>
 									<li class="fa-cubes">Leadership and teamwork</li>
 									<li class="fa-coffee">Working with efficiency</li>
