--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		</noscript>
 		<style type="text/css">
 			.carousel {
+				-webkit-transform: translate3d(0,0,0);
 				background: rgba(0,0,0,0.85);
 				position: fixed;
 				right: 0;
