--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="js/init.js"></script>
 		<script src="js/carousel.js"></script>
 		<noscript>
+			<link rel="stylesheet" href="css/carousel.css" />
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<!-- <link rel="stylesheet" href="css/carousel.css"> -->
