--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 											<ul class="thumbnail-right">
 												<li> Tracked people in video clips using a deep reinforcement learning approach and created decision-making network for tracking trained by policy gradient</li>
 												<li> Combined deep neural network with motion prediction </li>
-												<li> Submitted paper, <a href = "MADRL.pdf" style="font-style:italic;color:black;text-decoration:underline">Multi-Agent Deep Reinforcement Learning for Multi-Object Tracking</a> for CVPR 2018 </li>
+												<li> Paper accepted for ECCV 2018, <a href = "MADRL.pdf" style="font-style:italic;color:black;text-decoration:underline">Collaborative Deep Reinforcement Learning for Multi-Object Tracking</a></li>
 											</ul>
 										</div>
 									</article>
