updated personal info

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 								<header class="major">
 									<h3>About Me</h3>
 								</header>
-								<p> I am Zifeng Wang, a fourth year student of <a href="http://www.ee.tsinghua.edu.cn/publish/eeen/index.html">department of Electronic Engineering</a>, <a href = "http://www.sist.tsinghua.edu.cn/docinfo_eng/index.jsp">School of Information Science and Technology</a>, <a href = "http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>, Beijing. I am about to graduate and continue my study abroad. My study and research interests mainly focus on machine learning, computer vision and various application of artificial intelligence. I believe AI would change the world ultimately.  </p>
+								<p> I am Zifeng Wang, a new PhD student in Machine Learning of Northeastern University, advised by Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a>. I just got my BS degree from <a href="http://www.ee.tsinghua.edu.cn/publish/eeen/index.html">department of Electronic Engineering</a> at<a href = "http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>, Beijing. My study and research interests mainly focus on machine learning, computer vision and various application of artificial intelligence. I believe AI would change the world ultimately.  </p>
 
-									<p>I am currently work in <a href = "http://ivg.au.tsinghua.edu.cn/index.php">Intelligent Vision Group (IVG)</a> advised by Prof <a href = "http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>. At summer 2017, I went to University of Michigan as a visiting researcher under the instruction of Prof. <a href = "http://web.eecs.umich.edu/~jiadeng/">Jia Deng</a>. Before that, I worked with Prof <a href = "http://www.tsinghua.edu.cn/publish/eeen/3784/2010/20101219115601212198627/20101219115601212198627_.html">Shengjin Wang</a> and Professor <a href="http://fi.ee.tsinghua.edu.cn/~liyong/">Yong Li</a> on vision and big data respectively. During my exchange at Northeastern University, I worked with Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a> on machine learning. You could refer my <a href = "ZifengWangCV.pdf" style="color:black;text-decoration:underline">curriculum vitae</a> for further information.</p>
+									At summer 2017, I went to University of Michigan as a visiting researcher under the instruction of Prof. <a href = "http://web.eecs.umich.edu/~jiadeng/">Jia Deng</a>. Before that, I worked with Prof <a href = "http://www.tsinghua.edu.cn/publish/eeen/3784/2010/20101219115601212198627/20101219115601212198627_.html">Shengjin Wang</a> and Professor <a href="http://fi.ee.tsinghua.edu.cn/~liyong/">Yong Li</a> on vision and big data respectively. During my exchange at Northeastern University, I worked with Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a> on machine learning. You could refer my <a href = "ZifengWangCV.pdf" style="color:black;text-decoration:underline">curriculum vitae</a> for further information.</p>
 							</div>
 						</section>
 						
@@ -174,7 +174,7 @@
 											<ul class="thumbnail-right">
 												<li> Tracked people in video clips using a deep reinforcement learning approach and created decision-making network for tracking trained by policy gradient</li>
 												<li> Combined deep neural network with motion prediction </li>
-												<li> Paper accepted for ECCV 2018, <a href = "MADRL.pdf" style="font-style:italic;color:black;text-decoration:underline">Collaborative Deep Reinforcement Learning for Multi-Object Tracking</a></li>
+												<li> Paper accepted for ECCV 2018, <a href = "Liangliang_Ren_Collaborative_Deep_Reinforcement_ECCV_2018_paper.pdf" style="font-style:italic;color:black;text-decoration:underline">Collaborative Deep Reinforcement Learning for Multi-Object Tracking</a></li>
 											</ul>
 										</div>
 									</article>
