--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
 								<header class="major">
 									<h3>About Me</h3>
 								</header>
-								<p> I am Zifeng Wang, a new PhD student in Machine Learning of Northeastern University, advised by Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a>. I just got my BS degree from <a href="http://www.ee.tsinghua.edu.cn/publish/eeen/index.html">department of Electronic Engineering</a> at<a href = "http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>, Beijing. My study and research interests mainly focus on machine learning, computer vision and various application of artificial intelligence. I believe AI would change the world ultimately.  </p>
+								<p> I am Zifeng Wang, a first-year PhD student in Machine Learning at <a href="https://www.northeastern.edu/">Northeastern University</a>>, advised by Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a>. I just got my BS degree in Electronic Engineering from Tsinghua University</a>, Beijing. My study and research interests mainly focus on machine learning, computer vision and various application of artificial intelligence. I believe AI would change the world ultimately.  </p>
 
+									Before entering Northeastern, I worked with Prof. <a href="https://sites.google.com/site/elujiwen/">Jiwen Lu</a> on multi-object tracking by reinforcement learning.
 									At summer 2017, I went to University of Michigan as a visiting researcher under the instruction of Prof. <a href = "http://web.eecs.umich.edu/~jiadeng/">Jia Deng</a>. Before that, I worked with Prof <a href = "http://www.tsinghua.edu.cn/publish/eeen/3784/2010/20101219115601212198627/20101219115601212198627_.html">Shengjin Wang</a> and Professor <a href="http://fi.ee.tsinghua.edu.cn/~liyong/">Yong Li</a> on vision and big data respectively. During my exchange at Northeastern University, I worked with Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a> on machine learning. You could refer my <a href = "ZifengWangCV.pdf" style="color:black;text-decoration:underline">curriculum vitae</a> for further information.</p>
 							</div>
 						</section>
@@ -143,6 +144,7 @@
 							<div class="container">
 								<h3>Education Background</h3>
 								<ul id="exp" style="list-style:none;">
+									<li> <img class="school-logo" src="schools/NEU.jpeg"><div class="school-text">Sep 2018 - Present, Northeastern University, <br />PhD Student in Electronic Engineering, Dean's Fellow </div></li>
 									<li> <img class="school-logo" src="schools/Tsinghua.jpeg"><div class="school-text">Aug 2014 - July 2018, Tsinghua University, <br />B.S. degree in Electronic Engineering, GPA 92/100 (Top 5%) </div></li>
 									<li> <img class="school-logo" src="schools/UMich.jpeg"><div class="school-text">July 2017 - Sep 2017, University of Michigan, <br />Visiting researcher at Department of Computer Science and Engineering</div></li>
 									<li> <img class="school-logo" src="schools/NEU.jpeg"><div class="school-text">Sep 2016 - Dec 2016, Northeastern University, <br />Exchange student at Department of Computer and Electrical Engineering</div></li>
@@ -157,7 +159,7 @@
 						<section id="three">
 							<div class="container">
 								<h3>Research Experience</h3>
-								<p>I have joined several research teams, from big data mining to computer vision. These precious experiences taught me a lot.</p>
+								<p>I have joined several research teams, from big data mining to computer vision. These precious experiences taught me a lot. New experiences are not updated yet, but you could refer my CV for details.</p>
 								<div class="features">
 									<article>
 										<div >
