--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<header>
 						<span class="image avatar"><img src="images/zifeng_avatar.png" alt="" /></span>
 						<h1 id="logo"><a href="#">Zifeng Wang</a></h1>
-						<p><a href="mailto:zifengwangking@163.com">mail: zifengwangking@163.com</a></p>
+						<p><a href="mailto:zifengwangking@163.com">mail: zifengwang@ece.neu.edu</a></p>
 						<p><a href="mailto:zifengwangking@163.com"><a href = "ZifengWangCV.pdf">curriculum vitae</a></a></p>
 					</header>
 					<nav id="nav">
@@ -246,6 +246,8 @@
 							<div class="container">
 								<h3>Selected Awards</h3>
 								<ul>
+									<li><text style="color:black">Dean's Fellowship</text>, 2018 <br /> 
+									     Highest honor awarded to new PhD students in Northeastern University for their out standing academic background</li>
 									<li><text style="color:black">Evergrande Scholarship</text>, 2016 <br /> 
 									     Awarded to students with excellent academic performance, scientific potential and overall development. For about top 5% out of 233 students</li>
 									<li><text style="color:black">China Scholarship Council Outstanding Undergraduate Students Scholarship</text>, 2016 <br />
