--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 					<header>
 						<span class="image avatar"><img src="images/zifeng_avatar.png" alt="" /></span>
 						<h1 id="logo"><a href="#">Zifeng Wang</a></h1>
-						<p><a href="mailto:zifengwangking@163.com">mail: zifengwang@ece.neu.edu</a></p>
-						<p><a href="mailto:zifengwangking@163.com"><a href = "ZifengWangCV.pdf">curriculum vitae</a></a></p>
+						<p><a href="mailto:zifengwang@ece.neu.edu">mail: zifengwang@ece.neu.edu</a></p>
+						<p><a href = "ZifengWangCV.pdf">curriculum vitae</a></a></p>
 					</header>
 					<nav id="nav">
 						<ul>
@@ -118,7 +118,7 @@
 							<!--<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
 							<li><a href="https://www.linkedin.com/in/zifeng-wang-21b069b4/" class="icon fa-linkedin"><span class="label">Github</span></a></li> 
-							<li><a href="mailto:zifengwangking@163.com" class="icon fa-envelope"><span class="label">Email zifengwangking@163.com</span></a></li>
+							<li><a href="mailto:zifengwang@ece.neu.edu" class="icon fa-envelope"><span class="label">Email zifengwangking@163.com</span></a></li>
 						</ul>
 					</footer>
 				</section>
@@ -132,7 +132,7 @@
 								<header class="major">
 									<h3>About Me</h3>
 								</header>
-								<p> I am Zifeng Wang, a first-year PhD student in Machine Learning at <a href="https://www.northeastern.edu/">Northeastern University</a>>, advised by Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a>. I just got my BS degree in Electronic Engineering from Tsinghua University</a>, Beijing. My study and research interests mainly focus on machine learning, computer vision and various application of artificial intelligence. I believe AI would change the world ultimately.  </p>
+								<p> I am Zifeng Wang, a first-year PhD student in Machine Learning at <a href="https://www.northeastern.edu/">Northeastern University</a>, advised by Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a>. I just got my BS degree in Electronic Engineering from Tsinghua University</a>, Beijing. My study and research interests mainly focus on machine learning, computer vision and various application of artificial intelligence. I believe AI would change the world ultimately.  </p>
 
 									Before entering Northeastern, I worked with Prof. <a href="https://sites.google.com/site/elujiwen/">Jiwen Lu</a> on multi-object tracking by reinforcement learning.
 									At summer 2017, I went to University of Michigan as a visiting researcher under the instruction of Prof. <a href = "http://web.eecs.umich.edu/~jiadeng/">Jia Deng</a>. Before that, I worked with Prof <a href = "http://www.tsinghua.edu.cn/publish/eeen/3784/2010/20101219115601212198627/20101219115601212198627_.html">Shengjin Wang</a> and Professor <a href="http://fi.ee.tsinghua.edu.cn/~liyong/">Yong Li</a> on vision and big data respectively. During my exchange at Northeastern University, I worked with Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a> on machine learning. You could refer my <a href = "ZifengWangCV.pdf" style="color:black;text-decoration:underline">curriculum vitae</a> for further information.</p>
