modified resume, add neurips

--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
 									<li><a href="">Open-World Class Discovery with Kernel Networks</a><br /> 
 										Zifeng Wang, Batool Salehi, Andrey Gritsenko, Kaushik Chowdhury, Stratis Ioannidis, and Jennifer Dy. <br />
 										<a href="http://icdm2020.bigke.org/">IEEE International Conference on Data Mining (ICDM 2020)</a>, Sorrento, Italy, 2020.
-									<!-- <li><a href="">Instance-wise Fea-ture Grouping</a><br /> 
-										Aria Masoomi, Chieh Wu, Tingting Zhao,ZifengWang, Peter Castaldi, Jennifer Dy. <br />
-										<a href="https://nips.cc/Conferences/2020/">Neural Information Processing Systems (NeurIPS 2020)</a>, Virtual, 2020. -->
+									<li><a href="">Instance-wise Fea-ture Grouping</a><br /> 
+										Aria Masoomi, Chieh Wu, Tingting Zhao, Zifeng Wang, Peter Castaldi, Jennifer Dy. <br />
+										<a href="https://nips.cc/Conferences/2020/">Neural Information Processing Systems (NeurIPS 2020)</a>, Virtual, 2020.
 									<li><a href="">Finding a ‘New’ Needle in the Haystack: Unseen Radio Detection in Large Populations Using Deep Learning</a><br /> 
 										Andrey Gritsenko*, Zifeng Wang*, Jennifer Dy, Kaushik Chowdhury, and Stratis Ioannidis <br />
 										<a href="https://dyspan2019.ieee-dyspan.org/">IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN 2019)</a>, Newark, NJ, 2019. <text style="color:red">Best Paper Award.</text>
