--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 											<ul class="thumbnail-right">
 												<li> Incoporated the state-of-the-art Alternating Direction Method of Multipliers (ADMM) based pruning strategy to solve the lifelong learning problem.</li>
 												<li> Designed a novel knowledge sharing scheme,  which learns to select useful knowledge from old tasks and adapt them to the current task. </li>
-												<li> Paper accepted at ICDM 2020, <a href="">Learn-Prune-Share for Lifelong Learning</a></li>.
+												<li> Paper accepted at ICDM 2020, <a href="Learn_Prune_Share_for_Lifelong_Learning.pdf">Learn-Prune-Share for Lifelong Learning</a></li>.
 											</ul>
 										</div>
 									</article>
@@ -196,7 +196,7 @@
 											<ul class="thumbnail-right">
 												<li> Proposed  a  deep  learning  framework  which  utilizes HSIC to bridge supervised and unsupervised information together in a systematic way.</li>
 												<li> Addresses the problem of overfitting to old classes, leading  to  improved  class  discovery,  and can be generically applied  to  a  broad  array of deep architectures. </li>
-												<li> Paper accepted at ICDM 2020, <a href="">Open-World Class Discovery with Kernel Networks</a></li>.
+												<li> Paper accepted at ICDM 2020, <a href="Open_World_Class_Discovery_with_Kernel_Networks.pdf">Open-World Class Discovery with Kernel Networks</a></li>.
 											</ul>
 										</div>
 									</article>
@@ -216,7 +216,9 @@
 											<ul class="thumbnail-right">
 												<li> Proposed a novel approach to  train  a  neural  network  that  facilitates  new  class  detection.</li>
 												<li> Perform  extensive  analysis  of  the  proposed  modelboth  in  terms  of  model  parameters  and  real-world  datasets. </li>
-												<li> <text style="color:red">Best Paper Award</text> at DySPAN 2019, <a href="">Open-World Class Discovery with Kernel Networks</a></li>.
+												<li> <text style="color:red">Best Paper Award</text> at DySPAN 2019, <a href="https://genesys-lab.org/papers/1570567491-3.pdf">Finding a ‘New’ Needle in the Haystack:
+													Unseen Radio Detection in Large Populations
+													Using Deep Learning</a></li>.
 											</ul>
 										</div>
 									</article>
@@ -311,19 +313,19 @@
 							<h4>Conference Papers</h4>
 							<font size="-0.5">
 								<ul>
-									<li><a href="">Learn-Prune-Share for Lifelong Learning</a><br /> 
+									<li><a href="Learn_Prune_Share_for_Lifelong_Learning.pdf">Learn-Prune-Share for Lifelong Learning</a><br /> 
 										Zifeng Wang, Tong Jian, Kaushik Chowdhury, Yanzhi Wang, Jennifer Dy, and Stratis Ioannidis. <br />
 										<a href="http://icdm2020.bigke.org/">IEEE International Conference on Data Mining (ICDM 2020)</a>, Sorrento, Italy, 2020. </li>
-									<li><a href="">Open-World Class Discovery with Kernel Networks</a><br /> 
+									<li><a href="Open_World_Class_Discovery_with_Kernel_Networks.pdf">Open-World Class Discovery with Kernel Networks</a><br /> 
 										Zifeng Wang, Batool Salehi, Andrey Gritsenko, Kaushik Chowdhury, Stratis Ioannidis, and Jennifer Dy. <br />
 										<a href="http://icdm2020.bigke.org/">IEEE International Conference on Data Mining (ICDM 2020)</a>, Sorrento, Italy, 2020.
 									<li><a href="">Instance-wise Fea-ture Grouping</a><br /> 
 										Aria Masoomi, Chieh Wu, Tingting Zhao, Zifeng Wang, Peter Castaldi, Jennifer Dy. <br />
 										<a href="https://nips.cc/Conferences/2020/">Neural Information Processing Systems (NeurIPS 2020)</a>, Virtual, 2020.
-									<li><a href="">Finding a ‘New’ Needle in the Haystack: Unseen Radio Detection in Large Populations Using Deep Learning</a><br /> 
+									<li><a href="https://genesys-lab.org/papers/1570567491-3.pdf">Finding a ‘New’ Needle in the Haystack: Unseen Radio Detection in Large Populations Using Deep Learning</a><br /> 
 										Andrey Gritsenko*, Zifeng Wang*, Jennifer Dy, Kaushik Chowdhury, and Stratis Ioannidis <br />
 										<a href="https://dyspan2019.ieee-dyspan.org/">IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN 2019)</a>, Newark, NJ, 2019. <text style="color:red">Best Paper Award.</text>
-									<li><a href="">Collaborative Deep Reinforcement Learning for Multi-Object Tracking</a><br /> 
+									<li><a href="https://openaccess.thecvf.com/content_ECCV_2018/papers/Liangliang_Ren_Collaborative_Deep_Reinforcement_ECCV_2018_paper.pdf">Collaborative Deep Reinforcement Learning for Multi-Object Tracking</a><br /> 
 										Liangliang Ren, Jiwen Lu,Zifeng Wang, Qi Tian, and Jie Zhou. <br />
 										<a href="https://eccv2018.org/">In Proceedings of the European Conference on Computer Vision (ECCV 2018)</a>, Munich, Germany, 2020.
 								</ul>
