--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 											<ul class="thumbnail-right">
 												<li> Proposed  a  deep  learning  framework  which  utilizes HSIC to bridge supervised and unsupervised information together in a systematic way.</li>
 												<li> Addresses the problem of overfitting to old classes, leading  to  improved  class  discovery,  and can be generically applied  to  a  broad  array of deep architectures. </li>
-												<li> Paper accepted at ICDM 2020, <a href="Open_World_Class_Discovery_with_Kernel_Networks.pdf">Open-World Class Discovery with Kernel Networks</a></li>.
+												<li> <text style="color:red">Best Paper Candidate</text> at ICDM 2020, <a href="Open_World_Class_Discovery_with_Kernel_Networks.pdf">Open-World Class Discovery with Kernel Networks</a></li>.
 											</ul>
 										</div>
 									</article>
