--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 										<a href="http://icdm2020.bigke.org/">IEEE International Conference on Data Mining (ICDM 2020)</a>, Sorrento, Italy, 2020. </li>
 									<li><a href="Open_World_Class_Discovery_with_Kernel_Networks.pdf">Open-World Class Discovery with Kernel Networks</a><br /> 
 										Zifeng Wang, Batool Salehi, Andrey Gritsenko, Kaushik Chowdhury, Stratis Ioannidis, and Jennifer Dy. <br />
-										<a href="http://icdm2020.bigke.org/">IEEE International Conference on Data Mining (ICDM 2020)</a>, Sorrento, Italy, 2020.
+										<a href="http://icdm2020.bigke.org/">IEEE International Conference on Data Mining (ICDM 2020)</a>, Sorrento, Italy, 2020. <text style="color:red">Best Paper Candidate.</text>
 									<li><a href="">Instance-wise Fea-ture Grouping</a><br /> 
 										Aria Masoomi, Chieh Wu, Tingting Zhao, Zifeng Wang, Peter Castaldi, Jennifer Dy. <br />
 										<a href="https://nips.cc/Conferences/2020/">Neural Information Processing Systems (NeurIPS 2020)</a>, Virtual, 2020.
