--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
 						<div class="container">
 							<h3>Awards</h3>
 							<ul>
+								<li><text style="color:black">Best Paper Candidate</text>, ICDM 2020 <br /> 
 								<li><text style="color:black">Best Paper Award</text>, DySPAN 2019 <br /> 
 								<li><text style="color:black">Travel Award</text>, DySPAN 2019 <br /> 
 								<li><text style="color:black">Travel Award</text>, NeurIPS 2019 <br /> 
