fix image problem

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <p>
                 <ul id="exp" style="list-style:none;">
 					<li> <img class="school-logo" src="images/exp_logos/NEU.jpeg"><div class="school-text">Sep 2018 - Present, Northeastern University, <br />Research assistant at <a href="https://web.northeastern.edu/spiral/">SPIRAL Group</a> </div></li>
-					<li> <img class="school-logo" src="images/exp_logos/google.png"><div class="school-text">June 2021 - Present, Google, <br /> Student researcher / Research Intern at <a href="https://research.google/teams/cloud-ai/">Cloud AI Research</a></div></li>
+					<li> <img class="school-logo" src="images/exp_logos/g.png"><div class="school-text">June 2021 - Present, Google, <br /> Student researcher / Research Intern at <a href="https://research.google/teams/cloud-ai/">Cloud AI Research</a></div></li>
 					<li> <img class="school-logo" src="images/exp_logos/Tsinghua.jpeg"><div class="school-text">Feb 2017 - July 2018, Tsinghua University, <br />Research assistant at <a href="http://ivg.au.tsinghua.edu.cn/index.php">i-Vision Group</a> </div></li>
 					<li> <img class="school-logo" src="images/exp_logos/UMich.jpeg"><div class="school-text">July 2017 - Sep 2017, University of Michigan, <br />Visiting researcher at <a href="https://pvl.cs.princeton.edu/"> Vision & Learning Lab</a> </div></li> 
 				</ul>
