--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </a>
                 <br>
                 <b>Zifeng Wang</b>, Zizhao Zhang, Chen-Yu Lee, Han Zhang, Ruoxi Sun, Xiaoqi Ren, Guolong Su, Vincent Perot, Jennifer Dy, Tomas Pfister<br>              
-                <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2022. <br> </em>
+                <em>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022. <br> </em>
                 
                 [<a href="https://arxiv.org/pdf/2112.08654.pdf">paper</a>] [<a href="https://github.com/google-research/l2p">code</a>] 
                 <br>
