add research interest

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
               <heading>Research</heading>
               <p>
                 <ul>
-					<li> Continual (Lifelong) Learning </li>
-          <li> Data-efficient and parameter-efficient Learning </li>
+					<li> Continual (Lifelong) learning </li>
+          <li> Data-efficient and parameter-efficient learning </li>
 					<li> Adversarial robustness and model compression </li>
 					<li> Deep learning applications in vision, document understanding, health, wireless communications, etc. </li>
 				</ul>
