--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<li> Continual (Lifelong) learning </li>
           <li> Data-efficient and parameter-efficient learning </li>
 					<li> Adversarial robustness and model compression </li>
-					<li> Deep learning applications in vision, document understanding, health, wireless communications, etc. </li>
+					<li> Deep learning applications in computer vision, natural language understanding, document understanding, healthcare, wireless communications, etc. </li>
 				</ul>
               </p>
             </td>
