--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                   <papertitle>Learn-Prune-Share for Lifelong Learning</papertitle>
                 </a>
                 <br>
-                <b>Zifeng Wang*</b>, Tong Jian*, Kaushik Chowdhury, Yanzhi Wang, Jennifer Dy, Stratis Ioannidis          
+                <b>Zifeng Wang*</b>, Tong Jian*, Kaushik Chowdhury, Yanzhi Wang, Jennifer Dy, Stratis Ioannidis <br>         
                 <em>International Conference on Data Mining (<b>ICDM</b>), 2020.<br> </em>
                 [<a href="https://arxiv.org/pdf/2012.06956.pdf">paper</a>] 
                 <br>
@@ -330,7 +330,7 @@
                   <papertitle>Open-world class discovery with kernel networks</papertitle>
                 </a>
                 <br>
-                <b>Zifeng Wang</b>, Batool Salehi, Andrey Gritsenko, Kaushik Chowdhury, Stratis Ioannidis, Jennifer Dy            
+                <b>Zifeng Wang</b>, Batool Salehi, Andrey Gritsenko, Kaushik Chowdhury, Stratis Ioannidis, Jennifer Dy   <br>          
                 <em>International Conference on Data Mining (<b>ICDM</b>), 2020.<br> </em>
                 <font color=red> Best papar candidate </font> <br>
                 [<a href="https://arxiv.org/pdf/2012.06957.pdf">paper</a>] 
@@ -354,7 +354,7 @@
                   <papertitle>Instance-wise Feature Grouping</papertitle>
                 </a>
                 <br>
-                Aria Masoomi, Chieh Wu, Tingting Zhao, <b>Zifeng Wang</b>, Peter Castaldi, Jennifer Dy          
+                Aria Masoomi, Chieh Wu, Tingting Zhao, <b>Zifeng Wang</b>, Peter Castaldi, Jennifer Dy <br>          
                 <em>Neural Information Processing Systems (<b>NeurIPS</b>), 2020. <br> </em>
                 [<a href="https://zhaottcrystal.github.io/pdf/InstanceFeatureSelection.pdf">paper</a>] 
                 <br>
@@ -378,7 +378,7 @@
                   <papertitle>Finding a ‘new’ needle in the haystack: Unseen radio detection in large populations using deep learning</papertitle>
                 </a>
                 <br>
-                Andrey Gritsenko*, <b>Zifeng Wang*</b>, Tong Jian, Jennifer Dy, Kaushik Chowdhury, Stratis Ioannidis         
+                Andrey Gritsenko*, <b>Zifeng Wang*</b>, Tong Jian, Jennifer Dy, Kaushik Chowdhury, Stratis Ioannidis <br>         
                 <em> IEEE International Symposium on Dynamic Spectrum Access Networks (<b>DySPAN</b>), 2019. <br> </em>
                 [<a href="https://www.researchgate.net/profile/Andrey-Gritsenko/publication/338074668_Finding_a_'New'_Needle_in_the_Haystack_Unseen_Radio_Detection_in_Large_Populations_Using_Deep_Learning/links/5e5d512a4585152ce80104af/Finding-a-New-Needle-in-the-Haystack-Unseen-Radio-Detection-in-Large-Populations-Using-Deep-Learning.pdf">paper</a>]
                 [<a href="https://coe.northeastern.edu/news/ece-team-wins-best-paper-award-at-ieee-dyspan-2019/">news</a>] 
@@ -403,7 +403,7 @@
                   <papertitle>Collaborative deep reinforcement learning for multi-object tracking</papertitle>
                 </a>
                 <br>
-                Liangliang Ren, Jiwen Lu, <b>Zifeng Wang</b>, Qi Tian, Jie Zhou       
+                Liangliang Ren, Jiwen Lu, <b>Zifeng Wang</b>, Qi Tian, Jie Zhou <br>        
                 <em> European Conference on Computer Vision (<b>ECCV</b>), 2018. <br> </em>
                 [<a href="https://openaccess.thecvf.com/content_ECCV_2018/papers/Liangliang_Ren_Collaborative_Deep_Reinforcement_ECCV_2018_paper.pdf">paper</a>]
                 <br>
