--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <b>Zifeng Wang</b>, Zizhao Zhang, Sayna Ebrahimi, Ruoxi Sun, Han Zhang, Chen-Yu Lee, Xiaoqi Ren, Guolong Su, Vincent Perot, Jennifer Dy, Tomas Pfister<br>              
                 <em>European Conference on Computer Vision (<b>ECCV</b>), 2022. <br> </em>
                 
-                [<a href="https://arxiv.org/pdf/2204.04799.pdf">paper</a>] [<a href="https://github.com/google-research/l2p">code will be released</a>]
+                [<a href="https://arxiv.org/pdf/2204.04799.pdf">paper</a>] [<a href="https://github.com/google-research/l2p">code</a>]
                 <br>
                 <p></p>
                 <p>   DualPrompt presents a novel approach to attach complementary prompts to the pre-trained backbone,
