--- a/index.html
+++ b/index.html
@@ -411,6 +411,24 @@
                 <p> We propose a collaborative deep reinforcement learning (C-DRL) method for multi-object tracking. Specifically, we consider each object as an agent and track it via the prediction network, and seek the optimal tracked results by exploiting the collaborative interactions of different agents and environments via the decision network</p>
               </td>
             </tr>
+          
+            <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+              <tr>
+                <td width="100%" valign="middle">
+                  <heading>Invited Talks</heading>
+                  <ul>
+                  <li><papertitle>Learning to Prompt for Rehearsal-free Continual Learning</papertitle><br />
+                    <em><a href="https://theaitalks.org/">AI Talks SG</a>, 2022, Remote </em><br />
+                  <li><papertitle>Revisiting Hilbert-Schmidt Information Bottleneck for Adversarial Robustness</papertitle><br />
+                    <em><a href="https://meetings.informs.org/wordpress/indianapolis2022/">INFORMS Annual Meeting</a>, 2022, Indianapolis, Indiana</em><br />
+                    [<a href="https://www.abstractsonline.com/pp8/#!/10693/presentation/4612">abstract</a>]
+                  <li><papertitle>Revisiting Hilbert-Schmidt Information Bottleneck for Adversarial Robustness (Chinese version)</papertitle><br />
+                    <em><a href="http://www.aitime.cn/">AI Time</a>, 2022, Remote<br /></em>
+                    [<a href="https://www.koushare.com/video/videodetail/24409">recording</a>][<a href="http://www.aitime.cn/Activity/activityDetail?id=359">blog</a>]
+              </ul>
+                </td>
+              </tr>
+          </table>
 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
               <tr>
