--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 <a href="mailto:zifengwang@ece.neu.edu">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.il/citations?user=N1uBekcAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/zifeng-wang-21b069b4/">LinkedIn</a> &nbsp/&nbsp
+                <a href="https://twitter.com/zifengwang315">Twitter</a> &nbsp/&nbsp
                 <a href="ZifengWang.pdf">Resume</a>
               </p>
             </td>
