--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
                     <li> <a href="javascript:toggle_vis('news')">Earlier news</a> </li>
                     <div id="news" style="display:none">
                       <li> 09/2020: Our paper on feature grouping is accepted at <b> NeurIPS 2021 </b>  </li>
-                      <li> 08/2020: Two papers on continual learning and open-world class discovery are accepted at <b> ICDM 2020 </b>, with one selected as <font color=red> the best papar candidate </font> </li>
-                      <li> 08/2019: One paper on unseen class detection is accepted at <b> DySPAN 2019 </b> as the <font color=red> best papar </font> </li>
+                      <li> 08/2020: Two papers on continual learning and open-world class discovery are accepted at <b> ICDM 2020 </b>, with one selected as <b> <font color=red> the best paper candidate </font> </b> </li>
+                      <li> 08/2019: One paper on unseen class detection is accepted at <b> DySPAN 2019 </b> as the <b> <font color=red> best paper </font> </b> </li>
                     </div>
                   </ul>
                   </p>
@@ -491,7 +491,7 @@
                 <b>Zifeng Wang</b>, Batool Salehi, Andrey Gritsenko, Kaushik Chowdhury, Stratis Ioannidis, Jennifer Dy
                 <br>
                 <em>International Conference on Data Mining (<b>ICDM</b>), 2020.<br> </em>
-                <font color=red> Best papar candidate </font> <br>
+                <font color=red> Best paper candidate </font> <br>
                 [<a href="https://arxiv.org/pdf/2012.06957.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -551,7 +551,7 @@
                 [<a
                   href="https://coe.northeastern.edu/news/ece-team-wins-best-paper-award-at-ieee-dyspan-2019/">news</a>]
                 <br>
-                <font color=red> Best papar award </font> <br>
+                <font color=red> Best paper award </font> <br>
                 <p></p>
                 <p> We propose a novel approach that facilitates new class detection without retraining a neural
                   network, and perform extensive analysis of the proposed model both in terms of model parameters and
