--- a/index.html
+++ b/index.html
@@ -638,7 +638,9 @@
                 <td width="100%" valign="middle">
                   <heading>Academic Service</heading>
                   <p>
-                    <strong>Reviewer</strong>: NeurIPS, ICML, ICLR, TPAMI
+                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-22, ICLR 22-23, CVPR 22 <br />
+                    <strong>PC Member</strong>: SDM 23 <br />
+                    <strong>Journal Reviewer</strong>: TPAMI, TMLR
                   </p>
                 </td>
               </tr>
