--- a/index.html
+++ b/index.html
@@ -302,6 +302,35 @@
 
             <tr>
               <td width="32%">
+                <img class="thumbnail" src="paper_images/sparcl.png" data-id="hbar-carousel"></img>
+                <div id="hbar-carousel" class="carousel">
+                  <img class="img-center-carousel" src="paper_images/sparcl.png" alt="">
+                  <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
+                      data-carousel-id="hbar-carousel" class="carousel-close"></a>
+                </div>
+              </td>
+
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <papertitle>SparCL: Sparse Continual Learning on the Edge</papertitle>
+                </a>
+                <br>
+                <b>Zifeng Wang*</b>, Zheng Zhan*, Yifan Gong, Geng Yuan, Wei Niu, Tong Jian,
+                Bin Ren, Stratis Ioannidis, Yanzhi Wang, Jennifer Dy<br>
+                <em>Neural Information Processing Systems (<b>NeurIPS</b>), 2022. <br> </em>
+                Paper and code will be released soon.
+                <!-- [<a href="">paper</a>] [<a
+                  href="">code</a>] -->
+                <br>
+                <p></p>
+                <p> SparCL explores sparsity for efficient continual learning and achieves both training acceleration and accuracy preservation through the synergy of three aspects: weight sparsity,
+                  data efficiency, and gradient sparsity. </p>
+              </td>
+            </tr>
+
+
+            <tr>
+              <td width="32%">
                 <img class="thumbnail" src="paper_images/dualprompt.png" data-id="hbar-carousel"></img>
                 <div id="hbar-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/dualprompt.png" alt="">
