--- a/index.html
+++ b/index.html
@@ -194,40 +194,6 @@
             </tbody>
           </table>
 
-          <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tbody><tr>
-              <td style="padding:20px;width:100%;vertical-align:middle">
-                <heading>News</heading>
-                <p> 
-                  <li> Our <a href="https://arxiv.org/pdf/2204.04799.pdf"> new paper on Continual Learning</a> is accepted at ECCV 2022!</li> 
-                  <li> I have an invited talk at the <a href="https://rosecvpr22.github.io/index.html#invited-speakers">CVPR 22 workshop on Robustness in Sequential Data</a>.
-                  <li> <a href="https://arxiv.org/pdf/2206.07240.pdf"> New paper on test-time adaptation</a> is out!</li> 
-                  <li> Our paper <a href="https://arxiv.org/pdf/2204.10377.pdf"> Contrastive Test-Time Adaptation </a> got accepted at CVPR 2022.</li> 
-                  <li>I joined <a href="https://research.google/teams/cloud-ai/"> Google Cloud AI Research</a> in November 2021!</li>
-                  <li>Our paper <a href="https://arxiv.org/pdf/2107.03315">Predicting with Confidence on Unseen Distributions</a> got accepted at ICCV 2021!</li>
-                  <li>I gave an invited talk at the <a href="https://sites.google.com/view/clvision2021">CVPR 21 Workshop on Continual Learning in Computer Vision</a>. Video is <a href="https://youtu.be/NeqPhripSkI?t=817">here</a>. </li>
-                  <li>I gave an invited talk at Google AI, Facebook AI, and Amazon on "Active, continual, and adaptive learning".</li>
-                  <li>I was recognized as an Outstanding Reviewer at <a href="http://cvpr2021.thecvf.com/node/184">CVPR 2021</a>. </li>
-            <li> <a href="javascript:toggle_vis('news')">show more</a> </li>
-            <div id="news" style="display:none"> 
-                  <li> Our paper <a href="https://openreview.net/pdf?id=tHgJoMfy6nI">Remembering for the Right Reasons</a> got accepted at ICLR 2021</li>        
-              <li> Our paper <a href="https://arxiv.org/pdf/2003.09553.pdf">Adversarial Continual Learning </a> got accepted at ECCV 2020</li>        
-              <li> I graduated from both ME and EECS departments in May 2020 and started my postdoc at BAIR! </li></ul> 
-            <li> I received <a href="https://www2.eecs.berkeley.edu/Students/Awards/11/?_ga=2.121718411.1669981988.1587577753-1589437370.1583733679">the Eugene L. Lawler Prize </a> from EECS department!</li>
-              <font face="Helvetica, &#39;sans&#39;" size="3" color="black">
-              <!-- <ul><li> New paper <a href="https://arxiv.org/pdf/2003.09553.pdf">"Adversarial Continual Learning" </a> on arXiv. <a href="https://github.com/facebookresearch/Adversarial-Continual-Learning">Code is also released!  </a></li></ul>
-              <font face="Helvetica, &#39;sans&#39;" size="3" color="black">        
-              <li> I will be co-organizing the <a href="https://sites.google.com/view/cl-icml">Workshop on Continual Learning</a>, co-occuring with ICML 2020</li> 
-              <font face="Helvetica, &#39;sans&#39;" size="3" color="black">            
-             <li> Our paper <a href="https://openreview.net/pdf?id=HklUCCVKDB">Uncertainty-guided Continual Learning with Bayesian Neural Networks </a> got accepted at ICLR 2020</li>
-              <li>I spent summer 2019 at Facebook AI Research in Menlo Park as an intern.</li> 
-              <li> Our paper <a href="https://arxiv.org/abs/1904.00370">Variational Advarsarial Active Learning </a> got accepted at ICCV 2019 as on <font color="green"><strong>Oral</strong></font>! (4.3%) </li>          
-              <li> I co-organized the <a href="https://wicvworkshop.github.io/CVPR2019/index.html#">6th Women in Computer Vision (WiCV) Workshop</a> , co-located with CVPR in June 2019</li>
-              </div>
-                </p>
-              </td>
-            </tr>
-            </tbody></table> -->
 
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -238,7 +204,7 @@
                   <p>
                   <ul>
                     <li> 09/2022: Our paper on efficient continual learning is accepted at <b> NeurIPS 2022 </b>  </li>
-                    <li> 09/2022: I will give a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a> </b></li>
+                    <li> 09/2022: I will give a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a></b></li>
                     <li> 09/2022: Our paper on adversarially robust pruning is accepted at <b> ICDM 2022 </b> </li>
                     <li> 07/2022: Our paper on prompting-based continual learning is accepted at <b> ECCV 2022 </b> </li>
                     <li> 03/2022: Our paper on prompting-based continual learning is accepted at <b> CVPR 2022 </b> </li>
@@ -623,7 +589,7 @@
                   <heading>Invited Talks</heading>
                   <ul>
                     <li>
-                      <papertitle>Learning to Prompt for Rehearsal-free Continual Learning</papertitle><br />
+                      <papertitle>Prompting-based Continual Learning</papertitle><br />
                       <em><a href="https://theaitalks.org/">AI Talks SG</a>, 2022, Remote </em><br />
                     <li>
                       <papertitle>Revisiting Hilbert-Schmidt Information Bottleneck for Adversarial Robustness
@@ -631,6 +597,10 @@
                       <em><a href="https://meetings.informs.org/wordpress/indianapolis2022/">INFORMS Annual Meeting</a>,
                         2022, Indianapolis, Indiana</em><br />
                       [<a href="https://www.abstractsonline.com/pp8/#!/10693/presentation/4612">abstract</a>]
+                      <li>
+                        <papertitle>Prompting-based Continual Learning</papertitle><br />
+                        <em><a href="https://www.continualai.org/">ContinualAI</a>, 2022, Remote </em><br />
+                        [<a href="https://www.youtube.com/watch?v=19bylhGhfAw&list=PLm6QXeaB-XkBMFxvgZvYjqhaPgGg8Um9Z&index=1">recording</a>]
                     <li>
                       <papertitle>Revisiting Hilbert-Schmidt Information Bottleneck for Adversarial Robustness (Chinese
                         version)</papertitle><br />
