--- a/index.html
+++ b/index.html
@@ -203,17 +203,18 @@
                   <heading>News</heading>
                   <p>
                   <ul>
+                    <li> 10/2022: I received the Scholar Award for NeurIPS 2022 <b> NeurIPS 2022 </b>  </li>
                     <li> 09/2022: Our paper on efficient continual learning is accepted at <b> NeurIPS 2022 </b>  </li>
-                    <li> 09/2022: I will give a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a></b></li>
+                    <li> 09/2022: I gave a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a></b></li>
                     <li> 09/2022: Our paper on adversarially robust pruning is accepted at <b> ICDM 2022 </b> </li>
                     <li> 07/2022: Our paper on prompting-based continual learning is accepted at <b> ECCV 2022 </b> </li>
                     <li> 03/2022: Our paper on prompting-based continual learning is accepted at <b> CVPR 2022 </b> </li>
                     <li> 02/2022: Our paper on Bayesian continual learning is accepted by <b> Neural Networks </b> </li>
                     <li> 09/2021: Our paper on HSIC for adversarial robustness is accepted at <b> NeurIPS 2021 </b>  </li>
-                    <li> 09/2021: Our paper on deep learning for smoking prediction is accepted by <b> PLOS Computational Biology </b>  </li>
-                    <li> 05/2021: I started my research internship at <b> <a href="https://research.google/teams/cloud-ai/">Google Cloud AI Research</a>  </b> </li>
+                    <li> 09/2021: Our paper on deep learning for smoking prediction is accepted by <b> PLOS Computational Biology </b>  </li>                
                     <li> <a href="javascript:toggle_vis('news')">Earlier news</a> </li>
                     <div id="news" style="display:none">
+                      <li> 05/2021: I started my research internship at <b> <a href="https://research.google/teams/cloud-ai/">Google Cloud AI Research</a>  </b> </li>
                       <li> 09/2020: Our paper on feature grouping is accepted at <b> NeurIPS 2021 </b>  </li>
                       <li> 08/2020: Two papers on continual learning and open-world class discovery are accepted at <b> ICDM 2020 </b>, with one selected as <b> <font color=red> the best paper candidate </font> </b> </li>
                       <li> 08/2019: One paper on unseen class detection is accepted at <b> DySPAN 2019 </b> as the <b> <font color=red> best paper </font> </b> </li>
@@ -617,6 +618,7 @@
                 <td width="100%" valign="middle">
                   <heading>Awards</heading>
                   <ul>
+                    <li><text style="color:black">Scholar Award</text>, NeurIPS 2022 <br />
                     <li><text style="color:black">Best Paper Candidate</text>, ICDM 2020 <br />
                     <li><text style="color:black">Best Paper Award</text>, DySPAN 2019 <br />
                     <li><text style="color:black">Travel Award</text>, DySPAN 2019 <br />
