--- a/index.html
+++ b/index.html
@@ -142,9 +142,10 @@
                     <a href="https://sites.google.com/view/hanzhang">Han Zhang</a>,
                     <a href="https://research.google/people/VincentPerot/">Vincent Perot</a>,
                     <a href="https://research.google/people/107194/">Ruoxi Sun</a>,
-                    <a href="https://research.google/people/GuolongSu/">Guolong Su</a> and
-                    <a href="https://resnick.caltech.edu/people/xiaoqi-ren">Xiaoqi Ren</a>.
-
+                    <a href="https://research.google/people/GuolongSu/">Guolong Su</a>,
+                    <a href="https://resnick.caltech.edu/people/xiaoqi-ren">Xiaoqi Ren</a>,
+                    <a href="https://www.linkedin.com/in/hao-zhang-4a7aab56/">Hao Zhang</a> and
+                    <a href="https://research.google/people/106320/">Jacob Devlin</a>.
                   </p>
                   <p> I received my BS degree in Electronic Engineering from <a
                       href="http://www.tsinghua.edu.cn/publish/thu2018en/index.html">Tsinghua University</a>, Beijing.
