--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   <heading>News</heading>
                   <p>
                   <ul>
-                    <li> 10/2022: I received the Scholar Award for NeurIPS 2022 <b> NeurIPS 2022 </b>  </li>
+                    <li> 10/2022: I received the <b> Scholar Award for NeurIPS 2022 </b>  </li>
                     <li> 09/2022: Our paper on efficient continual learning is accepted at <b> NeurIPS 2022 </b>  </li>
                     <li> 09/2022: I gave a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a></b></li>
                     <li> 09/2022: Our paper on adversarially robust pruning is accepted at <b> ICDM 2022 </b> </li>
