--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                 <td width="100%" valign="middle">
                   <heading>Academic Service</heading>
                   <p>
-                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-22, ICLR 22-23, CVPR 22 <br />
+                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-22, ICLR 22-23, CVPR 22-23 <br />
                     <strong>PC Member</strong>: SDM 23 <br />
                     <strong>Journal Reviewer</strong>: TPAMI, TMLR
                   </p>
