--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                   <ul>
                     <li> Continual (Lifelong) learning </li>
                     <li> Data-efficient and parameter-efficient learning </li>
+                    <li> Open set recognition / novel class discovery </li>
                     <li> Adversarial robustness and model compression </li>
                     <li> Deep learning applications in computer vision, natural language understanding, document
                       understanding, healthcare, wireless communications, etc. </li>
