--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                     &nbsp/&nbsp
                     <a href="https://www.linkedin.com/in/zifeng-wang-21b069b4/">LinkedIn</a> &nbsp/&nbsp
                     <a href="https://twitter.com/zifengwang315">Twitter</a> &nbsp/&nbsp
-                    <a href="ZifengWang.pdf">Resume</a>
+                    <a href="ZifengWang-Resume.pdf">Resume</a>
+                    <a href="ZifengWang-CV.pdf">CV</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:20%;max-width:20%">
@@ -642,9 +643,9 @@
                 <td width="100%" valign="middle">
                   <heading>Academic Service</heading>
                   <p>
-                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-22, ICLR 22-23, CVPR 22-23 <br />
+                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-23, ICLR 22-23, CVPR 22-23, ACL ARR <br />
                     <strong>PC Member</strong>: SDM 23 <br />
-                    <strong>Journal Reviewer</strong>: TPAMI, TMLR
+                    <strong>Journal Reviewer</strong>: TPAMI, TMLR, Neural Networks
                   </p>
                 </td>
               </tr>
