--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     &nbsp/&nbsp
                     <a href="https://www.linkedin.com/in/zifeng-wang-21b069b4/">LinkedIn</a> &nbsp/&nbsp
                     <a href="https://twitter.com/zifengwang315">Twitter</a> &nbsp/&nbsp
-                    <a href="ZifengWang-Resume.pdf">Resume</a>
+                    <a href="ZifengWang-Resume.pdf">Resume</a> &nbsp/&nbsp
                     <a href="ZifengWang-CV.pdf">CV</a>
                   </p>
                 </td>
