--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                       </div>
                     </li>
                     <li> <img class="school-logo" src="images/exp_logos/g.png">
-                      <div class="school-text">June 2021 - Present, Google, <br /> Student researcher / Research Intern
+                      <div class="school-text">June 2021 - Jan 2023, Google, <br /> Student researcher / Research Intern
                         at <a href="https://research.google/teams/cloud-ai/">Cloud AI Research</a></div>
                     </li>
                     <li> <img class="school-logo" src="images/exp_logos/Tsinghua.jpeg">
