--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                 <td width="100%" valign="middle">
                   <heading>Academic Service</heading>
                   <p>
-                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-23, ICLR 22-23, CVPR 22-23, ACL ARR <br />
+                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-23, ICLR 22-23, CVPR 22-23, ICCV 23, ACL ARR <br />
                     <strong>PC Member</strong>: SDM 23 <br />
                     <strong>Journal Reviewer</strong>: TPAMI, TMLR, Neural Networks
                   </p>
